[gd_scene load_steps=5 format=2]

[ext_resource path="res://Imagenes/figcu.png" type="Texture" id=1]
[ext_resource path="res://Scrips/cudrado/Cuadrado.gd" type="Script" id=2]
[ext_resource path="res://Scrips/cudrado/Cuadrado_.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 56.1427

[node name="Cuadrado_" type="TextureRect"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cuadrado" type="TextureRect" parent="."]
margin_left = 192.0
margin_top = 449.0
margin_right = 192.0
margin_bottom = 449.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Cuadrado"]
modulate = Color( 1, 1, 1, 0.796078 )
texture = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="Cuadrado/Sprite"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -108.0
margin_top = -108.0
margin_right = -108.0
margin_bottom = -108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="Cuadrado"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cuadrado/Area2D"]
shape = SubResource( 1 )

[node name="Area_teselado" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area_teselado"]
polygon = PoolVector2Array( 415, -192, 416, 1216, 1500, 1216, 1499, -192 )

[connection signal="move_to_top" from="Cuadrado" to="." method="_on_Cuadrado_move_to_top"]
[connection signal="gui_input" from="Cuadrado/Sprite/TextureRect" to="Cuadrado" method="_on_TextureRect_gui_input"]
[connection signal="area_entered" from="Cuadrado/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Cuadrado/Area2D" to="." method="_on_Area2D_area_exited"]
